# py-aiger-improv

./: README.md  pyproject.toml
aiger_improv/: __init__.py  aig2mdd.py  dist.py  improv.py  model.py
tests/: test_improv.py  test_model.py
