[tool.poetry]
name = "py-aiger-improv"
version = "0.1.0"
description = "Create controlled improvisors to control aiger circuits."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
mdd = "^0.2.0"
py-aiger-bdd = "^3.0.0"
py-aiger-bv = "^4.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
